# pyvims

./: .gitignore  .pylintrc  .travis.yml  .zenodo.json  AUTHORS  CHANGELOG.md  ChangeLog  Dockerfile  LICENSE.md  MANIFEST.in  README.md  README.rst  docker-compose.yml  environment.yml  meta.yaml  playground.ipynb  pyproject.toml  pyvims.ipynb  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  vims.py
.github/workflows/: actions.yml
binder/: requirements.txt
notebooks/: .gitignore  VIMS_wvlns.ipynb  playground.ipynb  pyvims.ipynb  saturation_snr_errorbars.ipynb
pyvims/: __init__.py  __version__.py  _communs.py  _geojson.py  _geomerty.py  _info.py  camera.py  cassini.py  constantes.py  contour.py  coordinates.py  corners.py  errors.py  flyby.py  img.py  interactive.py  interp.py  isis.py  noodle.py  pixel.py  plot.py  quaternions.py  qub.py  specular.py  spice_cassini.py  spice_geojson.py  spice_moon.py  star.py  time.py  vars.py  vectors.py  vertices.py  vims.py  vims_class.py  vims_geojson.py  vims_geotiff.py  vims_isis3.py  vims_lbl.py  vims_nav.py  vims_nav_geojson.py  (+6 more)
pyvims/calib/: __init__.py  data.py  vars.py
pyvims/calib/data/: RC19-VIMS_IR-calibration_multiplier.csv  RC19-VIMS_IR-wave_photon_cal.csv  RC19-VIMS_IR-wavelengths.csv  RC19-VIMS_VIS-calibration_multiplier.csv  RC19-VIMS_VIS-wave_photon_cal.csv  RC19-VIMS_VIS-wavelengths.csv
pyvims/data/: README.md  flybys.csv  wvlns_std.csv
pyvims/data/maps/: README.md
pyvims/geojson/: collection.py  geometry.py
pyvims/geol/: __init__.py  cmap.py  data.py  titan.py  units.py
pyvims/geotiff/: __init__.py  arcmap.py  envi.py  geotiff.py  ortho.py
pyvims/isis/: __init__.py  camera.py  errors.py  img.py  interp.py  isis.py  labels.py  plot.py  projection.py  quaternions.py  sky.py  specular.py  tables.py  target.py  time.py  vars.py  vectors.py  vims.py
pyvims/isis/misc/: __init__.py  geocube.py
pyvims/isis/projections/: __init__.py  equirectangular.py  polar.py  sky.py  sterographic.py
pyvims/isis3/: __init__.py  cli.py  isis3.py  vims.py
pyvims/map/: __init__.py  footprint.py  geojson.py  plot.py
pyvims/map/bg/: README.md
pyvims/misc/: __init__.py  geocube.py  greatcircle.py  maps.py  md5.py  vertices.py
pyvims/pds/: cli.py  errors.py  html.py  releases.py  times.py
pyvims/planets/: __init__.py  __main__.py  __type__.py  enceladus.py
pyvims/projections/: __init__.py  __main__.py  equi.py  equi_gc.py  equirectangular.py  img.py  mollweide.py  ortho.py  orthographic.py  polar.py  sky.py  sky_old.py  stere.py  stereographic.py
pyvims/titan/: lakes.py
src/pyvims/: __init__.py  __version__.py  angles.py  camera.py  cassini.py  constantes.py  contour.py  coordinates.py  corners.py  flyby.py  img.py  interactive.py  interp.py  noodle.py  pixel.py  plot.py  quaternions.py  qub.py  specular.py  star.py  target.py  vars.py  vectors.py  vertices.py  vims.py  wget.py  wvlns.py
src/pyvims/calib/: data.py  vars.py
src/pyvims/calib/data/: RC19-VIMS_IR-solar.csv  RC19-VIMS_VIS-solar.csv
src/pyvims/data/: wvlns_ir_shift.csv
src/pyvims/data/maps/: .gitignore  README.md
src/pyvims/geojson/: __init__.py  feature.py  geojson.py
src/pyvims/geol/: __init__.py  cmap.py  data.py  titan.py  units.py
src/pyvims/isis/: __init__.py  history.py  isis.py  labels.py  tables.py  time.py  vars.py
src/pyvims/misc/: __init__.py  geocube.py  greatcircle.py  maps.py  md5.py  vertices.py
src/pyvims/pds/: __init__.py  cli.py  errors.py  html.py  releases.py  times.py  vars.py
src/pyvims/planets/: __init__.py  __main__.py  __type__.py  titan.py
src/pyvims/projections/: __init__.py  __main__.py  equi.py  equi_gc.py  equirectangular.py  globe.py  lambert.py  mollweide.py  ortho.py  orthographic.py  path3d.py  sky.py  sky_old.py  stere.py
src/pyvims/titan/: lakes.py
tests/: requirements.txt  test_angles.py  test_cassini.py  test_coordinates.py  test_interp.py  test_noodle.py  test_qub.py  test_star.py  test_vectors.py  test_vims_cube.py  test_vims_image.py  test_vims_pixel.py  test_wget.py  test_wvlns.py
tests/calib/: test_data.py
tests/data/: C1540484434_1_001_ir.cub  C1540484434_1_002_ir.cub  C1540484434_1_003_ir.cub  v1477479472_1.qub  v1487096932_1.lbl  v1787314297_1.qub  v1815243432_1.qub
tests/geojson/: test_collection.py  test_feature.py  test_geometry.py
tests/misc/: test_greatcircle.py  test_md5.py
tests/pds/: test_times.py
tests/planets/: test_planet.py  test_planets.py
tests/projections/: test_equi.py  test_equi_gc.py  test_equi_path.py  test_equirectangular.py  test_img.py  test_mollweide.py  test_ortho.py  test_ortho_path.py  test_path3d.py  test_projection.py  test_sky.py  test_stere.py
tests/projections/data/: README.md
tests/titan/: test_lakes.py
