[project]
name = "pyvims"
version = "1.1.1"
authors = [
    { name = "Benoît Seignovert", email = "benoit.seignovert@univ-nantes.fr" },
]
maintainers = [
    { name = "Benoît Seignovert", email = "benoit.seignovert@univ-nantes.fr" },
]
description = "Python package to manipulate the Cassini VIMS data"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["cassini", "vims", "titan"]
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy>2",
    "matplotlib>=3.1",
    "Pillow",
    "scipy",
    "tqdm",
    "requests",
    "pvl",
]

[dependency-groups]
linter = [
    "ruff>=0.15",
]
tests = [
    "pytest",
    "pytest-cov",
    "requests-mock",
    "nbval",
]
deploy = [
    "bump-my-version>=1.2",
]

[project.urls]
Repository = "https://github.com/seignovert/pyvims/"

[project.scripts]
pds = "pyvims.pds.cli:cli"

[tool.setuptools.package-data]
pyvims = [
    "calib/data/*.csv",
    "data/*",
    "data/maps/*.jpg",
    "geol/data/*.png",
]

[tool.uv]
package = true
default-groups = "all"

# Ruff config
[tool.ruff]
line-length = 90

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.ruff.lint]
preview = true
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle
    "W",    # pycodestyle
    "PL",   # Pylint
    "I",    # isort
    "N",    # pep8-naming
    "C90",  # mccabe
    "UP",   # pyupgrade
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "T20",  # flake8-print
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
]
ignore = [
    "A005",     # disable shadowing a Python builtin module
    "COM812",   # disable ruff format warning
    "S603",     # disable subprocess-without-shell-equals-true (see PyCQA/bandit#333)
    "PLR2004",  # magic-value-comparison
    "E302",
    "D300",
    "D105",
    "D107",
    "D401",
    "N802",
    "E741",
    "E743",
    "D402",
]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = [
    "T20",  # flake8-print
]
"src/*.py" = [
    # FIXME
    "PLW1641",  # Object does not implement `__hash__` method
    "S113",     # Probable use of `requests` call without timeout
    "PLR0904",  # Too many public methods (> 30)
    "PLR0911",  # Too many return statements (> 6)
    "PLR0912",  # Too many branches (> 12)
    "PLR0913",  # Too many arguments in function definition (> 10)
    "PLR0914",  # Too many local variables (> 15)
    "PLR0917",  # Too many positional arguments (> 10)
]
"src/pyvims/plot.py" = [
    # FIXME
    "C901",  # too complex (14 > 10)
]
"src/pyvims/pds/times.py" = [
    # FIXME
    "PLC1901",
]
"tests/*.py" = [
    "S101",     # assert
]

# Isort configuration

[tool.ruff.lint.isort]
lines-after-imports = 2
relative-imports-order = "closest-to-furthest"
section-order = [
  "future",
  "standard-library",
  "numpy",
  "matplotlib",
  "pytest",
  "third-party",
  "first-party",
  "local-folder",
]

known-first-party = ["pyvims"]

[tool.ruff.lint.isort.sections]
numpy = ["numpy"]
matplotlib = ["matplotlib"]
pytest = ["pytest"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-statements = 100
max-args = 10
max-public-methods = 30
allow-dunder-method-names = ["_ipython_key_completions_", "_repr_html_", "_repr_png_"]

[tool.pytest.ini_options]
addopts = "-vv --color=yes"
testpaths = ["tests"]

[tool.coverage.report]
include = [
	"pyvims/*.py",
]
skip_covered = true
show_missing = true
exclude_lines = [
    "def __repr__",
    "def __new__",
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.bumpversion]
current_version = "1.1.1"
commit = true
tag = true
tag_name = "{new_version}"
sign_tags = true


[[tool.bumpversion.files]]
filename = "src/pyvims/__version__.py"

[[tool.bumpversion.files]]
filename = "README.md"

## Bump changelog

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = """
[Unreleased][new]
-----------------
[new]: https://github.com/seignovert/pyvims/compare/{current_version}...main
"""
replace = """
[Unreleased][new]
-----------------
[new]: https://github.com/seignovert/pyvims/compare/{new_version}...main


[Release {new_version} - {now:%Y/%m/%d}][{new_version}]
-----------------------------------
[{new_version}]: https://github.com/seignovert/pyvims/releases/tag/{new_version}
"""
