[metadata]
name = pyvims
author = Benoit Seignovert
author-email = pyvims@seignovert.fr
summary = Python package to manipulate the Cassini VIMS data.
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = http://github.com/seignovert/pyvims
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Astronomy
keywords =
    nasa
    cassini
    vims
    titan

[files]
packages =
    pyvims

[wheel]
universal = 1
