[metadata]
name = pyvims
author = Benoit Seignovert
author-email = pyvims@seignovert.fr
summary = Python package to manipulate the Cassini VIMS data.
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = http://github.com/seignovert/pyvims
license = MIT
keywords = nasa, cassini, vims, titan
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Astronomy

[files]
packages =
    pyvims

[wheel]
universal = 1
