[metadata]
name = pyvims
author = Benoit Seignovert
author-email = pyvims@seignovert.fr
summary = Python package to manipulate the Cassini VIMS data.
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = http://github.com/seignovert/pyvims
license = MIT
keywords = nasa, cassini, vims, titan
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Astronomy

[files]
packages =
    pyvims

[wheel]
universal = 1

[tool:pytest]
addopts = --verbose

[coverage:report]
include =
    pyvims/*.py
omit =
    *.cfg
    tests/test_*.py
show_missing = True
exclude_lines =
    def __repr__
    def __new__
    pragma: no cover
skip_covered = True

[flake8]
max-line-length = 90
ignore = E302, D300, D105, D107, D401, W503, N802, I100, E741, E743, D402
max-complexity = 10